<resources>
    <string name="app_name">Shop_Vitara</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="rp1"><h2><b>Vitara Online Return Policy</b></h2></string>
    <string name="rp2"><p>Returns is a scheme provided by respective sellers directly under this policy in terms of which the option of replacement and/ or refund is offered by the respective sellers to you. All products listed under a particular category may have the same returns policy.</p>
    </string>
    <string name="rp3"><p>All Product 7 working days refund money.</p>
    </string>
    <string name="rp4"><h3><b>Returns Pick-Up and Processing :</b></h3>
</string>
    <string name="rp5"><p>In case of returns where you would like item(s) to be picked up from a different address, the address can only be changed if pick-up service is available at the new address.</p>
</string>
    <string name="rp6"><p>During pick-up, your product will be checked for the following conditions:</p>
</string>
    <string name="rp7"><p><b>- Category</b></p>
</string>
    <string name="rp8"><p><b>- Conditions</b></p>
</string>
    <string name="rp9"><p>Correct Product :</p>
</string>
    <string name="rp10">  <p>Name/ image/ brand/ serial number/ article number/ bar code should match and MRP tag should be undetected and clearly visible.</p>
</string>
    <string name="rp11"><p>Unused Product :</p>
</string>
    <string name="rp12"><p>The product should be unused, unwashed, unsoiled, without any stains and with non-tampered quality check seals/ warranty seals (wherever applicable).</p>
</string>
    <string name="rp13"><p>Undamaged Product :</p>
</string>
    <string name="rp14">     <p>-The product should be undamaged and without any holes.</p>
</string>
    <string name="rp15">     <p>Undamaged Packaging :</p>
</string>
    <string name="rp16">     <p>-Products original packaging/ box should be undamaged.</p>
</string>
    <string name="rp17">      <p>-The field executive may refuse to accept the return if any of the above conditions is not met.</p>
</string>
    <string name="rp18">     <p>-For any products for which a refund is to be given, the refund will be processed once the returned product has been received by the seller.</p>
    </string>
    <string name="tnc"><h2><b>VITARA Online Terms of Condition</b></h2></string>
    <string name="tnc1"><p>This document is an electronic record in terms of Information Technology Act, 2000 and rules there under as applicable and the amended provisions pertaining to electronic records in various statutes as amended by the Information Technology Act, 2000. This electronic record is generated by a computer system and does not require any physical or digital signatures.</p></string>
    <string name="tnc2"><p>
                    Your use of the Website and services and tools are governed by the following terms and conditions ( <b>"Terms of Use"</b> ) as applicable to the Website including the applicable policies which are incorporated herein by way of reference. If You transact on the Website, You shall be subject to the policies that are applicable to the Website for such transaction. By mere use of the Website, You shall be contracting with <b>VITARAONLINE</b> and these terms and conditions including the policies constitute Your binding obligations, with <b>VITARAONLINE</b>.
                </p>
                </string>
    <string name="tnc3"><h3><b>Your Account and Registration Obligations</b></h3></string>
    <string name="tnc4"><p>If You use the Website, You shall be responsible for maintaining the confidentiality of your Display Name and Password and You shall be responsible for all activities that occur under your Display Name and Password. You agree that if You provide any information that is untrue, inaccurate, not current or incomplete or We have reasonable grounds to suspect that such information is untrue, inaccurate, not current or incomplete, or not in accordance with the this Terms of Use, We shall have the right to indefinitely suspend or terminate or block access of your membership on the Website and refuse to provide You with access to the Website.
                </p>
                </string>
    <string name="tnc5"><h3><b>Communications</b></h3></string>
    <string name="tnc6"><p>When You use the Website or send emails or other data, information or communication to us, You agree and understand that You are communicating with Us through electronic records and You consent to receive communications via electronic records from Us periodically and as and when required. We may communicate with you by email or by such other mode of communication, electronic or otherwise.</p></string>
    <string name="tnc7">  <p>
                    Please read VITARAONLINE Terms of Service carefully before accessing or using our website. By accessing or using any part of the site, you agree to be bound by these Terms of Service. If you do not agree to all the terms and conditions of this agreement, then you may not access the website or use any services. If these Terms of Service are considered an offer, acceptance is expressly limited to these Terms of Service.
                </p>
              </string>
    <string name="tnc8"> <p>
                    This website is operated by VITARAONLINE. Throughout the site, the terms “we”, “us” and “our” refer to VITARAONLINE Services. VITARAONLINE offers this website, including all information, tools and services available from this site to you, the user, conditioned upon your acceptance of all terms, conditions, policies and notices stated here.
                </p>
               </string>
    <string name="tnc9">
         <p>
             By visiting our site and/ or purchasing something from us, you engage in our “Service” and agree to be bound by the following terms and conditions (“Terms of Service”, “Terms”), including those additional terms and conditions and policies referenced herein and/or available by hyperlink. These Terms of Service apply to all users of the site, including without limitation users who are browsers, vendors, customers, merchants, and/ or contributors of content.
                </p>

    </string>
    <string name="tnc10">
        <p>Any new features or tools which are added to the current store shall also be subject to the Terms of Service. You can review the most current version of the Terms of Service at any time on this page. We reserve the right to update, change or replace any part of these Terms of Service by posting updates and/or changes to our website. It is your responsibility to check this page periodically for changes. Your continued use of or access to the website following the posting of any changes constitutes acceptance of those changes.
                </p>

    </string>
    <string name="tnc11">
                        <h4>SECTION 1 – ONLINE STORE TERMS</h4>
    </string>
    <string name="tnc12">
         <p>
                    By agreeing to these Terms of Service, you represent that you are at least the age of majority in your state or province of residence, or that you are the age of majority in your state or province of residence and you have given us your consent to allow any of your minor dependents to use this site.
                </p>
    </string>
    <string name="tnc13">
        <p> You may not use our products for any illegal or unauthorized purpose nor may you, in the use of the Service, violate any laws in your jurisdiction (including but not limited to copyright laws).
                </p>
    </string>
    <string name="tnc14">
        <p> You must not transmit any worms or viruses or any code of a destructive nature.
                </p>
    </string>
    <string name="tnc15"><p>      A breach or violation of any of the Terms will result in an immediate termination of your Services.
                </p>
              </string>
    <string name="tnc16">
        <h4>SECTION 2 – GENERAL CONDITIONS</h4>
    </string>
    <string name="tnc17"><p>   We reserve the right to refuse service to anyone for any reason at any time.
                </p></string>
    <string name="tnc18"><p>  You understand that your content (not including credit card information), may be transferred unencrypted and involve (a) transmissions over various networks; and (b) changes to conform and adapt to technical requirements of connecting networks or devices. Credit card information is always encrypted during transfer over networks.
                </p></string>
    <string name="tnc19"><p>
        You agree not to reproduce, duplicate, copy, sell, resell or exploit any portion of the Service, use of the Service, or access to the Service or any contact on the website through which the service is provided, without express written permission by us.
    </p></string>
    <string name="tnc20"><p>The headings used in this agreement are included for convenience only and will not limit or otherwise affect these Terms.</p></string>
    <string name="checkout">CHECKOUT</string>
    <string name="your_cart_is_empty">Your Cart is empty</string>
    <string name="start_shopping">Start Shopping</string>
    <string name="about_this_product">About This Product</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="shop_by_category">Shop By Category</string>
    <string name="category_title">Category Title</string>
    <string name="you_haven_t_placed_any_orders_yet">You Havent Placed any orders yet</string>
    <string name="submit">Submit</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email address</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="our_team_is_happy_to_answer_your_questions_fill_out_the_form_we_ll_be_in_touch_as_soon_as_possible">Our Team is happy to answer your question fill out the from we will be in touch with you as soon as possible.</string>
    <string name="message">Message</string>
    <string name="subject">Subject</string>
    <string name="nav_home">Home</string>
    <string name="nav_about_us">About Us</string>
    <string name="nav_track_order">Track Order</string>
    <string name="customer_name">Customer Name</string>
    <string name="custmer_email">Custmer Email</string>
    <string name="Open">OPEN</string>
    <string name="Close">CLOSE</string>
    <string name="nav_product_description">Product Description</string>
    <string name="view_cart">View Cart</string>
    <string name="cart">Cart</string>
    <string name="login">Login</string>
    <string name="order_history">Order History</string>
    <string name="my_orders">My Orders</string>
    <string name="contact_us">Contact Us</string>
    <string name="return_policy">Return Policy</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_amp_condition"><![CDATA[Terms & Condition]]></string>
    <string name="log_out">Log out</string>
</resources>