<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent"
    tools:context=".Fragments.ReturnPolicyFragment">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_margin="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rp1"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:layout_marginTop="7.5dp"
                android:layout_marginLeft="7.5dp"
                android:layout_marginRight="7.5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rp2"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:layout_marginLeft="7.5dp"
                android:layout_marginRight="7.5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rp3"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:textStyle="bold"
                android:layout_marginLeft="7.5dp"
                android:layout_marginRight="7.5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rp4"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:layout_marginLeft="20dp"
                android:layout_marginRight="7.5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rp5"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:layout_marginLeft="20dp"
                android:layout_marginRight="7.5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rp6"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:layout_marginLeft="30dp"
                android:layout_marginRight="7.5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rp7"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:layout_marginLeft="30dp"
                android:layout_marginRight="7.5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rp8"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:layout_marginLeft="7.5dp"
                android:layout_marginRight="7.5dp"
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rp9"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:layout_marginLeft="20dp"
                android:layout_marginRight="7.5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rp10"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:textStyle="bold"
                android:layout_marginLeft="7.5dp"
                android:layout_marginRight="7.5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rp11"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:layout_marginLeft="7.5dp"
                android:layout_marginRight="7.5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rp12"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:layout_marginLeft="7.5dp"
                android:layout_marginRight="7.5dp"
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rp13"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:layout_marginLeft="7.5dp"
                android:layout_marginRight="7.5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rp14"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:layout_marginLeft="7.5dp"
                android:layout_marginRight="7.5dp"
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rp15"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:layout_marginLeft="7.5dp"
                android:layout_marginRight="7.5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rp16"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:layout_marginLeft="7.5dp"
                android:layout_marginRight="7.5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rp17"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:layout_marginLeft="7.5dp"
                android:layout_marginRight="7.5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rp18"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:layout_marginBottom="25sp"/>
        </LinearLayout>
    </ScrollView>
</FrameLayout>